--- a/public/assets/less/forum.less
+++ b/public/assets/less/forum.less
@@ -22,7 +22,7 @@ body{
 	}
 
 	button.btn.btn-primary{
-		border: 2px solid #f1f5ff;
+		border: 1px solid rgba(0, 0, 0, 0.3);
 	    background: none;
 	    color: #0098cb;
 	    &:hover, &:active, &:focus{
